--- a/error.htm
+++ b/error.htm
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <head>
 <title>Error - 404</title>
-<meta http-equiv = "refresh" content = "3; url = /index.php" />
+<meta http-equiv = "refresh" content = "3; url = /index.htm" />
 </head>
 <style>
 body {
